--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,7 +15,7 @@
 @import "lato/lato";
 
 // change bootstrap variables here, before import directive
-$font-family-sans-serif:  "lato regular", lato, Arial, sans-serif !default;
+// $font-family-sans-serif:  "lato regular", lato, Arial, sans-serif !default;
 $font-size-base:          16px !default;
 
 // "bootstrap-sprockets" must be imported before "bootstrap", "bootstrap/custom" and "bootstrap/variables"
